--- a/Kernel/Kernel.Security/Kernel.Security.csproj
+++ b/Kernel/Kernel.Security/Kernel.Security.csproj
@@ -1,75 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7C4225E8-700D-4FEE-9BBB-28A935364F05}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kernel.Security</RootNamespace>
-    <AssemblyName>Kernel.Security</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\Kernel.Data\Kernel.Data.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="CertificateManagement\CertificateContext.cs" />
-    <Compile Include="CertificateManagement\CertificateSearchCriteria.cs" />
-    <Compile Include="CertificateManagement\CertificateStore%271.cs" />
-    <Compile Include="CertificateManagement\FileCertificateContext.cs" />
-    <Compile Include="CertificateManagement\ICertificateManager.cs" />
-    <Compile Include="CertificateManagement\ICertificateStore.cs" />
-    <Compile Include="CertificateManagement\X509CertificateContext.cs" />
-    <Compile Include="Configuration\BackchannelConfiguration.cs" />
-    <Compile Include="Configuration\PinType.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validation\BackchannelCertificateValidationContext.cs" />
-    <Compile Include="Configuration\CertificateValidationConfiguration.cs" />
-    <Compile Include="Validation\CertificateValidationContext .cs" />
-    <Compile Include="Validation\IBackchannelCertificateValidationRule.cs" />
-    <Compile Include="Validation\IBackchannelCertificateValidator.cs" />
-    <Compile Include="Validation\ICertificateValidationConfigurationProvider.cs" />
-    <Compile Include="Validation\ICertificateValidationRule.cs" />
-    <Compile Include="Validation\ICertificateValidator.cs" />
-    <Compile Include="Validation\ICertificateValidatorResolver.cs" />
-    <Compile Include="Validation\IPinningSertificateValidator.cs" />
-    <Compile Include="Configuration\ValidationRuleDescriptor.cs" />
-    <Compile Include="Configuration\ValidationScope.cs" />
+    <Reference Include="System.IdentityModel">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2\System.IdentityModel.dll</HintPath>
+    </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Kernel.Data\Kernel.Data.csproj">
-      <Project>{3CE7FFD5-9F8C-4AF4-9855-67616B4862CC}</Project>
-      <Name>Kernel.Data</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
