--- a/Kernel/Kernel.Logging/Kernel.Logging.csproj
+++ b/Kernel/Kernel.Logging/Kernel.Logging.csproj
@@ -1,69 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DA939D6-5443-498F-AAA1-3CE3134BC3EB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kernel.Logging</RootNamespace>
-    <AssemblyName>Kernel.Logging</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Compile Remove="Logging\AbstractLogger.cs" />
+    <Compile Remove="Logging\LogEventSourceProvider.cs" />
+    <Compile Remove="Logging\LoggerManager.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="IdentityContext.cs" />
-    <Compile Include="Logging\AbstractLogger.cs" />
-    <Compile Include="Logging\AbstractLogWriter.cs" />
-    <Compile Include="Logging\ICustomLogger.cs" />
-    <Compile Include="Logging\ILogProvider.cs" />
-    <Compile Include="Logging\ILogWriter.cs" />
-    <Compile Include="Logging\InformationLogEventWriter.cs" />
-    <Compile Include="Logging\LogEventSourceProvider.cs" />
-    <Compile Include="Logging\LoggerManager.cs" />
-    <Compile Include="Logging\WarningLogEventWriter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Kernel.Configuration\Kernel.Configuration.csproj">
-      <Project>{b78beaba-813a-4c65-ba17-2207e5f37b66}</Project>
-      <Name>Kernel.Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Kernel\Kernel.csproj">
-      <Project>{A445B83F-A70E-4C45-B4A1-2A8AB696FA6B}</Project>
-      <Name>Kernel</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
