--- a/Authorization/Federation/Federation.Protocols/Federation.Protocols.csproj
+++ b/Authorization/Federation/Federation.Protocols/Federation.Protocols.csproj
@@ -1,186 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{33862A55-E53A-45EF-85C4-A9E1DEF4181C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Federation.Protocols</RootNamespace>
-    <AssemblyName>Federation.Protocols</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Security" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Compile Remove="Request\AuthnRequestBuilder.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Bindings\HttpPost\ClauseBuilders\RelayStateBuilder.cs" />
-    <Compile Include="Bindings\HttpPost\ClauseBuilders\SamlRequestBuilder.cs" />
-    <Compile Include="Bindings\HttpPost\ClauseBuilders\SignatureBuilder.cs" />
-    <Compile Include="Bindings\HttpPost\HttpPostBindingHandler.cs" />
-    <Compile Include="Bindings\HttpPost\PostBindingDecoder.cs" />
-    <Compile Include="Bindings\HttpPost\RequestPostBindingContext.cs" />
-    <Compile Include="Bindings\HttpRedirect\ClauseBuilders\RequestEncoderBuilder.cs" />
-    <Compile Include="Bindings\HttpRedirect\ClauseBuilders\SignatureBuilder.cs" />
-    <Compile Include="Bindings\HttpRedirect\ClauseBuilders\RelayStateBuilder.cs" />
-    <Compile Include="Bindings\HttpRedirect\ClauseBuilders\SamlRequestBuilder.cs" />
-    <Compile Include="Bindings\HttpRedirect\HttpRedirectBindingHandler.cs" />
-    <Compile Include="Bindings\HttpRedirect\RedirectBindingDecoder.cs" />
-    <Compile Include="Bindings\HttpRedirect\RequestBindingContext.cs" />
-    <Compile Include="Encodiing\MessageEncoding.cs" />
-    <Compile Include="Extensions\Saml20AssertionExtensions.cs" />
-    <Compile Include="Extensions\SamlAttributeExtensions.cs" />
-    <Compile Include="Factories\InboundHandleFactory.cs" />
-    <Compile Include="Helper.cs" />
-    <Compile Include="Initialisation\ProtocolInitialiser.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProtocolHandler.cs" />
-    <Compile Include="RelayState\RelayStateAppender.cs" />
-    <Compile Include="RelayState\RelayStateHandler.cs" />
-    <Compile Include="RelayState\RelaystateSerialiser.cs" />
-    <Compile Include="MessageTypeResolver.cs" />
-    <Compile Include="Request\Parsers\LogoutRequestParser.cs" />
-    <Compile Include="Request\Parsers\AuthnRequestParser.cs" />
-    <Compile Include="Request\Parsers\RequestParser.cs" />
-    <Compile Include="Request\RequestHelper.cs" />
-    <Compile Include="Request\ClauseBuilders\CommonAttributesBuilder.cs" />
-    <Compile Include="Request\RequestSerialiser.cs" />
-    <Compile Include="Request\ClauseBuilders\ScopingBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\RequestedAuthContextBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\SubjectClauseBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\NameIdPolicyClauseBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\AutnRequestClauseBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\AssertionConsumerServiceClauseBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\IdClauseBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\AudienceRestrictionClauseBuilder.cs" />
-    <Compile Include="Request\ClauseBuilders\IssuerClauseBuilder.cs" />
-    <Compile Include="Request\Handlers\AuthnRequestHandler.cs" />
-    <Compile Include="Request\RedirectRequestDispatcher.cs" />
-    <Compile Include="Request\PostRequestDispatcher.cs" />
-    <Compile Include="Request\SamlRequestParser.cs" />
-    <Compile Include="Request\Validation\RequestValidator.cs" />
-    <Compile Include="Request\Validation\SamlRequestValidationContext.cs" />
-    <Compile Include="Request\Validation\ValidationRules\RequestValidationRule.cs" />
-    <Compile Include="Request\Validation\ValidationRules\SignatureValidRule.cs" />
-    <Compile Include="Request\Validation\ValidationRules\RuleFactory.cs" />
-    <Compile Include="Response\IdpInitDiscoveryService.cs" />
-    <Compile Include="Response\ResponseDispatcher.cs" />
-    <Compile Include="Response\ResponseBuilder.cs" />
-    <Compile Include="Response\ResponseHelper.cs" />
-    <Compile Include="Response\SamlResponseParser.cs" />
-    <Compile Include="Response\SamlLogoutResponseParser.cs" />
-    <Compile Include="Response\SamlTokenResponseParser.cs" />
-    <Compile Include="Response\ResponseParser.cs" />
-    <Compile Include="Response\Validation\SamlResponseValidationContext.cs" />
-    <Compile Include="Response\Validation\ResponseValidator.cs" />
-    <Compile Include="Response\Validation\ValidationRules\InResponseToRule.cs" />
-    <Compile Include="Response\Validation\ValidationRules\IssuerKnownRule.cs" />
-    <Compile Include="Response\Validation\ValidationRules\TokenInResponseRule.cs" />
-    <Compile Include="Response\Validation\ValidationRules\ResponseSignatureRule.cs" />
-    <Compile Include="Response\Validation\ValidationRules\ResponseValidationRule.cs" />
-    <Compile Include="Response\Validation\ValidationRules\RuleFactory.cs" />
-    <Compile Include="Response\Validation\ValidationRules\RuleScope.cs" />
-    <Compile Include="Response\Validation\ValidationRules\RelayStateInResponseRule.cs" />
-    <Compile Include="Response\Validation\ValidationRules\ResponseSuccessRule.cs" />
-    <Compile Include="Tokens\TokenHelper.cs" />
-    <Compile Include="Response\ResponseHandler.cs" />
-    <Compile Include="Tokens\SecurityTokenHandler.cs" />
-    <Compile Include="Tokens\TokenHandlerConfigurationProvider.cs" />
-    <Compile Include="ClaimsProvider.cs" />
-    <Compile Include="Tokens\TokenSerialiser.cs" />
-    <Compile Include="Tokens\Validation\SecurityTokenValidator.cs" />
-    <Compile Include="Tokens\Validation\ConditionsValidator.cs" />
-    <Compile Include="Tokens\Validation\SubjectConfirmationDataValidator.cs" />
-    <Compile Include="Tokens\Validation\ValidatorInvoker.cs" />
+    <ProjectReference Include="..\..\..\Infrastructure\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\..\Kernel\Kernel.Authentication\Kernel.Authentication.csproj" />
+    <ProjectReference Include="..\..\..\Kernel\Kernel.Compression\Kernel.Compression.csproj" />
+    <ProjectReference Include="..\..\..\Kernel\Kernel.Configuration\Kernel.Configuration.csproj" />
+    <ProjectReference Include="..\..\..\Kernel\Kernel.Federation\Kernel.Federation.csproj" />
+    <ProjectReference Include="..\..\..\Kernel\Kernel.Logging\Kernel.Logging.csproj" />
+    <ProjectReference Include="..\..\..\Kernel\Kernel.Web\Kernel.Web.csproj" />
+    <ProjectReference Include="..\..\..\Serialisation\Serialisation.JSON\Serialisation.JSON.csproj" />
+    <ProjectReference Include="..\..\..\Serialisation\Serialisation.Xml\Serialisation.Xml.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Infrastructure\Shared\Shared.csproj">
-      <Project>{FA2CD1BF-A890-4306-9EDB-A1B10042E57E}</Project>
-      <Name>Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Authentication\Kernel.Authentication.csproj">
-      <Project>{1a84b7bb-abaf-401c-bca0-6066a54ddc22}</Project>
-      <Name>Kernel.Authentication</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Compression\Kernel.Compression.csproj">
-      <Project>{62B9DBC7-C71F-4D38-AD32-54CA2F274FD6}</Project>
-      <Name>Kernel.Compression</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Configuration\Kernel.Configuration.csproj">
-      <Project>{66B33AF1-B001-4DCD-9A7B-7C3E88FDF1CC}</Project>
-      <Name>Kernel.Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Cryptography\Kernel.Cryptography.csproj">
-      <Project>{06C00FA7-3B59-472B-9C9A-BC4E44BB62FE}</Project>
-      <Name>Kernel.Cryptography</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Federation\Kernel.Federation.csproj">
-      <Project>{4C5166B9-A9EC-4AB9-9982-D217DCBEF181}</Project>
-      <Name>Kernel.Federation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Logging\Kernel.Logging.csproj">
-      <Project>{3E8F0EF7-0A11-4DF6-BE70-22723E7FD06C}</Project>
-      <Name>Kernel.Logging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Reflection\Kernel.Reflection.csproj">
-      <Project>{05DE06E5-C85B-4752-BEAE-002B92CA224E}</Project>
-      <Name>Kernel.Reflection</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Security\Kernel.Security.csproj">
-      <Project>{2EFAB4B5-EA19-43D7-AF82-733FFE35CF32}</Project>
-      <Name>Kernel.Security</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Validation\Kernel.Validation.csproj">
-      <Project>{C15E73AD-29E4-483C-B9E8-88A856AC12A3}</Project>
-      <Name>Kernel.Validation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel.Web\Kernel.Web.csproj">
-      <Project>{03AF9AB0-8B79-45D0-87E7-441D013B8BB3}</Project>
-      <Name>Kernel.Web</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kernel\Kernel\Kernel.csproj">
-      <Project>{A445B83F-A70E-4C45-B4A1-2A8AB696FA6B}</Project>
-      <Name>Kernel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Serialisation\Serialisation.JSON\Serialisation.JSON.csproj">
-      <Project>{4EB8AB3B-2E70-410F-AA9B-8F1C9490FA3A}</Project>
-      <Name>Serialisation.JSON</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Serialisation\Serialisation.Xml\Serialisation.Xml.csproj">
-      <Project>{CAAA3B30-55E9-4F50-8F09-89CA54DF9614}</Project>
-      <Name>Serialisation.Xml</Name>
-    </ProjectReference>
+    <Reference Include="System.ComponentModel.DataAnnotations">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2\System.ComponentModel.DataAnnotations.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IdentityModel">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2\System.IdentityModel.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Security">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2\System.Security.dll</HintPath>
+    </Reference>
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
