--- a/Infrastructure/Shared/Shared.csproj
+++ b/Infrastructure/Shared/Shared.csproj
@@ -1,120 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FA2CD1BF-A890-4306-9EDB-A1B10042E57E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Shared</RootNamespace>
-    <AssemblyName>Shared</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Compile Remove="Federtion\Models\Attributes\AttributeStatement.cs" />
+    <Compile Remove="Federtion\Models\Elements\AuthnStatement.cs" />
+    <Compile Remove="Federtion\Models\Elements\AuthzDecisionStatement.cs" />
+    <Compile Remove="Federtion\Models\Elements\StatementAbstract.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Federtion\Authorization\AuthorizationServerConfigurationManager.cs" />
-    <Compile Include="Federtion\IdentityConfigurationHelper.cs" />
-    <Compile Include="Federtion\Factories\IMetadataHandler.cs" />
-    <Compile Include="Federtion\Models\AudienceRestriction.cs" />
-    <Compile Include="Federtion\Models\AuthnRequest.cs" />
-    <Compile Include="Federtion\Models\ConditionAbstract.cs" />
-    <Compile Include="Federtion\Models\Conditions.cs" />
-    <Compile Include="Federtion\ConfigurationManager.cs" />
-    <Compile Include="Federtion\MetadataWriter.cs" />
-    <Compile Include="Federtion\Models\Attributes\RequestedAttribute.cs" />
-    <Compile Include="Federtion\Models\Attributes\SamlAttribute.cs" />
-    <Compile Include="Federtion\Models\Elements\AuthnContext.cs" />
-    <Compile Include="Federtion\Models\Elements\AuthnContextComparisonType.cs" />
-    <Compile Include="Federtion\Models\Elements\AuthnContextType.cs" />
-    <Compile Include="Federtion\Models\Elements\BaseIdAbstract.cs" />
-    <Compile Include="Federtion\Models\Elements\DecisionType.cs" />
-    <Compile Include="Federtion\Models\Elements\IdpEntry.cs" />
-    <Compile Include="Federtion\Models\Elements\IdpList.cs" />
-    <Compile Include="Federtion\Models\Elements\KeyInfoConfirmationData.cs" />
-    <Compile Include="Federtion\Models\Elements\NameIDPolicy.cs" />
-    <Compile Include="Federtion\Models\Elements\RequestedAuthnContext.cs" />
-    <Compile Include="Federtion\Models\Elements\Saml20FormatException.cs" />
-    <Compile Include="Federtion\Models\Elements\Saml20Utils.cs" />
-    <Compile Include="Federtion\Models\Elements\Scoping.cs" />
-    <Compile Include="Federtion\Models\Elements\Subject.cs" />
-    <Compile Include="Federtion\Models\Elements\SubjectConfirmation.cs" />
-    <Compile Include="Federtion\Models\Elements\SubjectConfirmationData.cs" />
-    <Compile Include="Federtion\Models\Elements\SubjectLocality.cs" />
-    <Compile Include="Federtion\Models\LogoutRequest.cs" />
-    <Compile Include="Federtion\Models\NameId.cs" />
-    <Compile Include="Federtion\Models\OneTimeUse.cs" />
-    <Compile Include="Federtion\Models\ProxyRestriction.cs" />
-    <Compile Include="Federtion\Models\RequestAbstract.cs" />
-    <Compile Include="Federtion\Request\SamlInboundRequestContext.cs" />
-    <Compile Include="Federtion\Response\LogoutResponse.cs" />
-    <Compile Include="Federtion\Response\TokenResponse.cs" />
-    <Compile Include="Federtion\Response\SamlInboundResponseContext.cs" />
-    <Compile Include="Federtion\Forms\SAMLForm.cs" />
-    <Compile Include="Federtion\Response\Status.cs" />
-    <Compile Include="Federtion\Response\StatusCode.cs" />
-    <Compile Include="Federtion\Response\StatusDetail.cs" />
-    <Compile Include="Federtion\Response\StatusResponse.cs" />
-    <Compile Include="Federtion\SamlInboundMessageContext.cs" />
-    <Compile Include="Initialisation\Initialiser.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <ProjectReference Include="..\..\Kernel\Kernel.Federation\Kernel.Federation.csproj" />
+    <ProjectReference Include="..\..\Kernel\Kernel\Kernel.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <Folder Include="Federtion\Binging\" />
+    <Reference Include="System.IdentityModel">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2\System.IdentityModel.dll</HintPath>
+    </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Kernel\Kernel.Federation\Kernel.Federation.csproj">
-      <Project>{4C5166B9-A9EC-4AB9-9982-D217DCBEF181}</Project>
-      <Name>Kernel.Federation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Kernel\Kernel.Security\Kernel.Security.csproj">
-      <Project>{2EFAB4B5-EA19-43D7-AF82-733FFE35CF32}</Project>
-      <Name>Kernel.Security</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Kernel\Kernel\Kernel.csproj">
-      <Project>{A445B83F-A70E-4C45-B4A1-2A8AB696FA6B}</Project>
-      <Name>Kernel</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
