--- a/WebApi/packages.config
+++ b/WebApi/packages.config
@@ -8,6 +8,9 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net462" />
@@ -16,4 +19,5 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net462" />
 </packages>
