json token formater

--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -11,8 +11,9 @@
 	<appSettings>
 		<add key="Database" value="SSOConfiguration" />
 		<!--<add key="DataSource" value="lnsm0\sql2016" />-->
-		<add key="DataSource" value="DG-MFB\SQLEXPRESS_2016" />
-		<add key="Username" value="" />
+		<!--<add key="DataSource" value="DG-MFB\SQLEXPRESS_2016" />-->
+    <add key="DataSource" value="GW-WS-00383\SQLEXPRESS" />
+    <add key="Username" value="" />
 		<add key="Password" value="" />
 		<add key="applicationName" value="ECA_Events" />
 		<add key="EventLogName" value="ECA_Events" />
