change identity db connection sting

--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -28,7 +28,7 @@
 	
 	<connectionStrings>
 		<!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-AssetManagement-20161115104325.mdf;Initial Catalog=aspnet-AssetManagement-20161115104325;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
-		<add name="DefaultConnection" connectionString="Data Source=DG-MFB\SQLEXPRESS_2016;Initial Catalog=AssetManagement-20161115104325;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=GW-WS-00383\SQLEXPRESS;Initial Catalog=Identity;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
 	<system.identityModel>
