--- a/Web/FederationIdentityProvider/Client/package.json
+++ b/Web/FederationIdentityProvider/Client/package.json
@@ -13,24 +13,25 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~4.3.4",
-    "@angular/compiler": "~4.3.4",
-    "@angular/core": "~4.3.4",
-    "@angular/forms": "~4.3.4",
-    "@angular/http": "~4.3.4",
-    "@angular/platform-browser": "~4.3.4",
-    "@angular/platform-browser-dynamic": "~4.3.4",
-    "@angular/router": "~4.3.4",
-    "angular-in-memory-web-api": "~0.3.0",
-    "systemjs": "0.19.40",
-    "core-js": "^2.4.1",
+    "@angular/common": "^6.0.0-beta.3",
+    "@angular/compiler": "^6.0.0-beta.3",
+    "@angular/core": "^6.0.0-beta.3",
+    "@angular/forms": "^6.0.0-beta.3",
+    "@angular/http": "^6.0.0-beta.3",
+    "@angular/platform-browser": "^6.0.0-beta.3",
+    "@angular/platform-browser-dynamic": "^6.0.0-beta.3",
+    "@angular/router": "^6.0.0-beta.3",
+    "@angular/animations": "^6.0.0-beta.3",
+    "angular-in-memory-web-api": "^0.5.3",
+    "systemjs": "^0.21.0",
+    "core-js": "^2.5.3",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@types/node": "^6.0.60",
-    "concurrently": "^3.1.0",
+    "@types/node": "^9.4.5",
+    "concurrently": "^3.5.1",
     "lite-server": "^2.3.0",
-    "typescript": "^2.2.2"
+    "typescript": "^2.7.1"
   }
 }
